# ultra-trail-strategist

./: .coverage  .env.example  .gitignore  .pdm-python  Makefile  README.md  dashboard.py  main.py  pyproject.toml  run_bot.py
.github/workflows/: ci.yml
assets/: demo.gpx
models/: endomondo_base.pkl  endomondo_base_metadata.json
src/ultra_trail_strategist/: mcp_server.py  pipeline.py  protocols.py  state_manager.py
src/ultra_trail_strategist/agent/: strategist.py
src/ultra_trail_strategist/agent/specialists/: nutritionist.py  pacer.py
src/ultra_trail_strategist/api/: telegram_bot.py
src/ultra_trail_strategist/config/: logging.py  settings.py
src/ultra_trail_strategist/data_ingestion/: endomondo_loader.py  gpx_processor.py  health_client.py  strava_client.py  surface_client.py  utmb_scraper.py  weather_client.py
src/ultra_trail_strategist/feature_engineering/: base_model_trainer.py  drift_analyzer.py  fatigue_model.py  pace_model.py  segmenter.py  ultra_fatigue_adjuster.py
src/ultra_trail_strategist/ui/: components.py  map_renderer.py
src/ultra_trail_strategist/utils/: async_utils.py  cache_manager.py
tests/: conftest.py  test_async_utils.py  test_cache_manager.py  test_course_segmenter.py  test_drift_analyzer.py  test_endomondo_loader.py  test_fatigue_model.py  test_gpx_processor.py  test_health_client.py  test_hybrid_pace_model.py  test_integration.py  test_mcp_server.py  test_multi_agent.py  test_pace_model.py  test_state_manager.py  test_strategist_real.py  test_strava_client.py  test_surface_client.py  test_weather_client.py
