[project]
name = "ultra-trail-strategist"
version = "0.1.0"
description = "Agentic AI Application for ultra-distance race strategies."
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "scipy>=1.10.0",
    "gpxpy>=1.5.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "scikit-learn>=1.3.0",
    "mcp>=0.1.0",
    "garminconnect",
    "fastmcp",
    "streamlit",
    "plotly",
    "watchdog"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
